# tchecker

./: .gitignore  AUTHORS  CMakeLists.txt  CppCheckSuppressions.txt  README.md
ci-scripts/: Dockerfile  build.sh  cloud-init.yml  create-vm.sh  github-ubuntu-build-and-test-clang.sh  github-ubuntu-build-and-test-gcc.sh  install_boost_1_81_0.sh  install_boost_1_86.sh  tchecker.ovf  vm-tutorial.tex
cmake/: CheckCompilerFlags.cmake
examples/: Lieb_et_al_1.sh  Lieb_et_al_1_diff_invariant.sh  Lieb_et_al_1_non_determ_bisim.sh  Lieb_et_al_2.sh  Lieb_et_al_2_determ_split_bisim.sh  Lieb_et_al_2_determ_split_non_bisim.sh  Lieb_et_al_2_non_determ_bisim.sh  Lieb_et_al_3.sh  Lieb_et_al_4.sh  Lieb_et_al_5.sh  Lieb_et_al_6.sh  count_to_inf.sh  count_to_inf.txt  easy-ad94-added-transition.sh  easy-ad94-different-guard.sh  easy-ad94.sh  eval_non_determ.sh  missing_initial.sh  missing_initial.txt  strong_timed_bisim_system_tests_edge_case_changed_actions.sh  strong_timed_bisim_system_tests_edge_case_changed_actions_changed.sh  strong_timed_bisim_system_tests_edge_case_urgent.sh  strong_timed_bisim_system_tests_edge_case_urgent_non_urgent.sh  strong_timed_bisim_system_tests_edge_case_without_trans.sh  strong_timed_bisim_system_tests_edge_case_without_trans_changed_inv.sh  strong_timed_bisim_system_tests_path_explosion_A1.sh  (+2 more)
src/simulate/: CMakeLists.txt  display.cc  graph.cc  simulate.cc
src/simulate/concrete/: CMakeLists.txt  clock_names.cc  concrete_display.cc  concrete_graph.cc  concrete_simulate.cc
src/simulate/symbolic/: CMakeLists.txt  symbolic_display.cc  symbolic_graph.cc  symbolic_simulate.cc
src/strong-timed-bisim/: CMakeLists.txt  algorithm_return_value.cc  contradiction_searcher.cc  init_states_creator.cc  non_bisim_cache.cc  search_contradiction.cc  stats.cc  system.cc  vcg-timed-bisim.cc  virtual_clock_algorithm.cc  visited_map.cc
src/strong-timed-bisim/certificate/: CMakeLists.txt  certificate_node.cc  clock_names.cc
src/strong-timed-bisim/certificate/contradiction/: CMakeLists.txt  cont_dag.cc  cont_edge.cc  cont_node.cc
src/strong-timed-bisim/certificate/witness/: CMakeLists.txt  witness_edge.cc  witness_graph.cc  witness_node.cc
src/strong-timed-bisim/witness/: CMakeLists.txt  witness_edge.cc  witness_graph.cc  witness_node.cc
test/tck-compare/: CMakeLists.txt  Lieb-et-al-1-Lieb-et-al-1-non-determ-bisim.out-expected  Lieb-et-al-1-Lieb-et-al-2.out-expected  Lieb-et-al-1-Lieb-et-al-3.out-expected  Lieb-et-al-2-Lieb-et-al-2-determ-split-bisim.out-expected  Lieb-et-al-2-Lieb-et-al-2-non-determ-bisim.out-expected  Lieb-et-al-3-Lieb-et-al-5.out-expected  Lieb-et-al-3-Lieb-et-al-6.out-expected  Lieb-et-al-4-Lieb-et-al-5.out-expected  Lieb-et-al-4-Lieb-et-al-6.out-expected  Lieb-et-al-5-Lieb-et-al-6.out-expected  Lieb-et-al-5-self.out-expected  Lieb-et-al-6-self.out-expected  easy-ad94-self-added-transition.out-expected  easy-ad94-self-different-guard.out-expected  easy-ad94-self.out-expected  edge-case-urgent.out-expected  edge-case-without-transitions-self.out-expected  no_initial_first.err-expected  no_initial_first.out-expected  no_initial_second.err-expected  path-explosion-1-3.out-expected  tck-compare-Lieb_et_al_1.out-expected  tck-compare-Lieb_et_al_2_determ_split_bisim.out-expected  tck-compare-Lieb_et_al_2_non_determ_bisim.out-expected  tck-compare-Lieb_et_al_5.out-expected  tck-compare-Lieb_et_al_6.out-expected  tck-compare-ad94-self.out-expected  tck-compare-easy-ad94-different-guard.out-expected  tck-compare-missing_initial.out-expected  tck-compare-strong_timed_bisim_system_tests_edge_case_changed_actions_changed.out-expected  tck-compare-strong_timed_bisim_system_tests_path_explosion_A1.out-expected
test/tck-compare-certificate/: CMakeLists.txt  av-protocol-av-protocol-bisim-cert.out-expected  av-protocol-av-protocol-non-bisim-changed-guard-cert.out-expected  av-protocol-av-protocol-non-bisim-changed-invariant-cert.out-expected  av-protocol-av-protocol-non-bisim-removed-reset-cert.out-expected  av-protocol-self-cert.out-expected  ca-ca-bisim-cert.out-expected  ca-ca-non-bisim-changed-guard-cert.out-expected  ca-ca-non-bisim-changed-invariant-cert.out-expected  ca-ca-non-bisim-removed-reset-cert.out-expected  ca-self-cert.out-expected  edge-case-urgent-non-urgent-self-cert.out-expected  edge-case-urgent-self-cert.out-expected  edge-case-urgent-vs-non-urgent-cert.out-expected  ieee-rcp-ieee-rcp-bisim-cert.out-expected  ieee-rcp-ieee-rcp-non-bisim-changed-guard-cert.out-expected  ieee-rcp-ieee-rcp-non-bisim-changed-invariant-cert.out-expected  ieee-rcp-ieee-rcp-non-bisim-removed-reset-cert.out-expected  ieee-rcp-self-cert.out-expected  tck-compare-cert-av-protocol-non-bisim-changed-invariant.out-expected  tck-compare-cert-av-protocol-non-bisim-removed-reset.out-expected  tck-compare-cert-collision-avoidance-non-bisim-changed-guard.out-expected  tck-compare-cert-collision-avoidance-non-bisim-removed-reset.out-expected  tck-compare-cert-collision-avoidance.out-expected  tck-compare-cert-ieee-rcp-bisim.out-expected  tck-compare-cert-ieee-rcp-non-bisim-changed-guard.out-expected
test/tck-compare-json/: CMakeLists.txt  Lieb-et-al-1-Lieb-et-al-1-diff-inv-json.out-expected  Lieb-et-al-1-self-json.out-expected  easy-ad-94-self-json-constraint-second.out-expected  easy-ad-94-self-json-constraint.out-expected  easy-ad94-added-transition-json.out-expected  easy-ad94-different-guard-json.out-expected  easy-ad94-self-json.out-expected  edge-case-urgent-self-json.out-expected  tck-compare-json-easy-ad94-added-transition.out-expected  tck-compare-json-easy-ad94.out-expected  tck-compare-json-strong_timed_bisim_system_tests_edge_case_changed_actions.out-expected  tck-compare-json-strong_timed_bisim_system_tests_edge_case_urgent_non_urgent.out-expected  tck-compare-json-strong_timed_bisim_system_tests_edge_case_without_trans_changed_inv.out-expected  tck-compare-json-strong_timed_bisim_system_tests_path_explosion_A2.out-expected  tck-compare-json-strong_timed_bisim_system_tests_path_explosion_A3.out-expected
test/tck-compare/certificate-tests/: CMakeLists.txt
(+330 files in other folders)
